--- a/full mixers.ipynb
+++ b/full mixers.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "11322472",
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'binsymbols'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-49372606e277>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# from qiskit_utilities.mixers import *\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mmixers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Desktop/quantum/optimization/mixers.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msympy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mphysics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquantum\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTensorProduct\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msympy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mphysics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpaulialgebra\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPauli\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mevaluate_pauli_product\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mbinsymbols\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msympy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mitertools\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'binsymbols'"
+     ]
+    }
+   ],
    "source": [
     "# import sys\n",
     "# sys.path.append('../')\n",
@@ -16,8 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8d9ecd99",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a86347a4",
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -38,86 +48,18 @@
      "output_type": "stream",
      "text": [
       "\u001b[31mstandard\u001b[0m\n",
-      "\u001b[32m1\u001b[0m\n",
-      "1.0 [1. 1.]\n",
-      "\u001b[32m2\u001b[0m\n",
-      "2.0 [1. 1. 1. 1.]\n",
-      "\u001b[32m3\u001b[0m\n",
-      "2.9999999999999996 [1. 1. 1. 1. 1. 1. 1. 1.]\n",
-      "\u001b[32m4\u001b[0m\n",
-      "4.000000000000002 [1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
-      "\u001b[32m5\u001b[0m\n",
-      "5.000000000000003 [-1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1.\n",
-      " -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1.]\n",
-      "\u001b[32m6\u001b[0m\n",
-      "6.000000000000006 [-1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1.\n",
-      " -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1.\n",
-      " -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1.\n",
-      " -1. -1. -1. -1. -1. -1. -1. -1. -1. -1.]\n",
-      "\u001b[31mnearest_int\u001b[0m\n",
-      "\u001b[32m1\u001b[0m\n",
-      "1.0 [1. 1.]\n",
-      "\u001b[32m2\u001b[0m\n",
-      "1.6180339887498942 [0.74349607 1.20300191 1.20300191 0.74349607]\n",
-      "\u001b[32m3\u001b[0m\n",
-      "1.879385241571817 [0.45602686 0.85705015 1.15470054 1.313077   1.313077   1.15470054\n",
-      " 0.85705015 0.45602686]\n",
-      "\u001b[32m4\u001b[0m\n",
-      "1.9659461993678033 [0.25210226 0.49561948 0.72225897 0.9243028  1.0948706  1.2281539\n",
-      " 1.3196139  1.36613602 1.36613602 1.3196139  1.2281539  1.0948706\n",
-      " 0.9243028  0.72225897 0.49561948 0.25210226]\n",
-      "\u001b[32m5\u001b[0m\n",
-      "1.9909438451461687 [-0.13237707 -0.2635553  -0.39234674 -0.51758503 -0.63813599 -0.75290789\n",
-      " -0.86086134 -0.96101869 -1.05247292 -1.13439578 -1.20604538 -1.26677284\n",
-      " -1.31602822 -1.35336544 -1.37844637 -1.39104388 -1.39104388 -1.37844637\n",
-      " -1.35336544 -1.31602822 -1.26677284 -1.20604538 -1.13439578 -1.05247292\n",
-      " -0.96101869 -0.86086134 -0.75290789 -0.63813599 -0.51758503 -0.39234674\n",
-      " -0.2635553  -0.13237707]\n",
-      "\u001b[32m6\u001b[0m\n",
-      "1.9976644536646535 [-0.06779782 -0.13543729 -0.20276045 -0.26961005 -0.33582996 -0.40126552\n",
-      " -0.46576391 -0.52917449 -0.59134915 -0.6521427  -0.71141313 -0.76902202\n",
-      " -0.82483483 -0.8787212  -0.93055527 -0.98021599 -1.02758737 -1.07255877\n",
-      " -1.11502516 -1.15488736 -1.19205226 -1.22643307 -1.25794949 -1.28652792\n",
-      " -1.31210159 -1.33461079 -1.35400295 -1.37023277 -1.38326234 -1.39306125\n",
-      " -1.39960659 -1.40288309 -1.40288309 -1.39960659 -1.39306125 -1.38326234\n",
-      " -1.37023277 -1.35400295 -1.33461079 -1.31210159 -1.28652792 -1.25794949\n",
-      " -1.22643307 -1.19205226 -1.15488736 -1.11502516 -1.07255877 -1.02758737\n",
-      " -0.98021599 -0.93055527 -0.8787212  -0.82483483 -0.76902202 -0.71141313\n",
-      " -0.6521427  -0.59134915 -0.52917449 -0.46576391 -0.40126552 -0.33582996\n",
-      " -0.26961005 -0.20276045 -0.13543729 -0.06779782]\n",
-      "\u001b[31mnearest_int_cyclic\u001b[0m\n",
-      "\u001b[32m1\u001b[0m\n",
-      "1.0 [1. 1.]\n",
-      "\u001b[32m2\u001b[0m\n",
-      "2.0 [1. 1. 1. 1.]\n",
-      "\u001b[32m3\u001b[0m\n",
-      "1.9999999999999996 [1. 1. 1. 1. 1. 1. 1. 1.]\n",
-      "\u001b[32m4\u001b[0m\n",
-      "1.9999999999999996 [-1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1.]\n",
-      "\u001b[32m5\u001b[0m\n",
-      "2.0000000000000004 [1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.\n",
-      " 1. 1. 1. 1. 1. 1. 1. 1.]\n",
-      "\u001b[32m6\u001b[0m\n",
-      "1.9999999999999996 [1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.\n",
-      " 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.\n",
-      " 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
-      "\u001b[31mfull\u001b[0m\n",
-      "\u001b[32m1\u001b[0m\n",
-      "1.0 [1. 1.]\n",
-      "\u001b[32m2\u001b[0m\n",
-      "3.0 [-1. -1. -1. -1.]\n",
-      "\u001b[32m3\u001b[0m\n",
-      "6.999999999999999 [1. 1. 1. 1. 1. 1. 1. 1.]\n",
-      "\u001b[32m4\u001b[0m\n",
-      "15.0 [-1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1.]\n",
-      "\u001b[32m5\u001b[0m\n",
-      "31.00000000000001 [1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.\n",
-      " 1. 1. 1. 1. 1. 1. 1. 1.]\n",
-      "\u001b[32m6\u001b[0m\n",
-      "63.000000000000085 [-1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1.\n",
-      " -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1.\n",
-      " -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1.\n",
-      " -1. -1. -1. -1. -1. -1. -1. -1. -1. -1.]\n"
+      "\u001b[32m1\u001b[0m\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_T' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-0eca528084f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\x1b[32m\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"\\x1b[0m\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mT\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mget_T\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0ml\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meigh\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'get_T' is not defined"
      ]
     }
    ],
@@ -135,7 +77,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0818dea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -143,7 +84,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c5131d92",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +134,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe3d798e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -202,7 +141,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "76f3da9a",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +166,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0374f492",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -236,7 +173,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ef209dc1",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +231,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c72f0c7e",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +346,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31202667",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -419,7 +353,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d0b83076",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +413,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1e494d16",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +525,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a9c1112c",
    "metadata": {
     "scrolled": false
    },
@@ -719,7 +650,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "362a0823",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -727,7 +657,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "829b0fee",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +884,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d4611550",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +893,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e2aeaecc",
    "metadata": {
     "scrolled": false
    },
@@ -1041,7 +968,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6426c65d",
    "metadata": {
     "scrolled": false
    },
@@ -1051,7 +977,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2566119c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +994,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1cc5a5ca",
    "metadata": {
     "scrolled": false
    },
@@ -1200,7 +1124,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acfc2c8f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1208,7 +1131,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4bc78438",
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1162,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "055cd64a",
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1194,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a3786ae5",
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1219,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b27d7789",
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1250,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "df80bfd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,7 +1259,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "cf8b39ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1375,7 +1292,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f5acdcc5",
    "metadata": {
     "scrolled": false
    },
@@ -1500,7 +1416,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "61b05894",
    "metadata": {
     "scrolled": false
    },
@@ -1625,7 +1540,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "937be7b9",
    "metadata": {
     "scrolled": false
    },
@@ -1750,7 +1664,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f44dd820",
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1786,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34312da4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1881,7 +1793,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b2efe674",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1929,7 +1840,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "afb3c2c6",
    "metadata": {
     "scrolled": true
    },
@@ -2105,7 +2015,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc4534df",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2113,7 +2022,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e01d93d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2155,7 +2063,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "13916c3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2201,7 +2108,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9ccbd726",
    "metadata": {},
    "outputs": [
     {
@@ -2250,7 +2156,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "cfc32366",
    "metadata": {},
    "outputs": [
     {
@@ -2299,7 +2204,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9047914",
    "metadata": {
     "scrolled": true
    },
@@ -2309,7 +2213,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "3b00bfdd",
    "metadata": {},
    "outputs": [
     {
@@ -2358,7 +2261,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "43f324d9",
    "metadata": {},
    "outputs": [
     {
@@ -2407,7 +2309,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c6eb6aa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2448,7 +2349,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "79107243",
    "metadata": {},
    "outputs": [
     {
@@ -2503,7 +2403,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5435a352",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2511,7 +2410,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd2c3897",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2519,7 +2417,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1877a1e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2527,7 +2424,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f23a620a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2535,7 +2431,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0b86486",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2543,7 +2438,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6787077",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2551,7 +2445,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5daa70e7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2559,7 +2452,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "ed752e72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2571,7 +2463,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "e4490f35",
    "metadata": {
     "scrolled": false
    },
@@ -2660,7 +2551,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "e045d2e1",
    "metadata": {
     "scrolled": false
    },
@@ -2821,7 +2711,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c89adf7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2829,7 +2718,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4533f61e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2837,7 +2725,6 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "d028b920",
    "metadata": {
     "scrolled": false
    },
@@ -2880,8 +2767,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_H' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-6c1e2fc0e5e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mH\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_H\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'get_H' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "H = get_H(4**1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "706f830e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2903,7 +2810,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
